Add demo images and update README

--- a/templates/index.html
+++ b/templates/index.html
@@ -195,9 +195,9 @@
                 </div>
             </div>
             <div class="inner cover">
-                <h1 class="cover-heading">基于神经协同过滤算法的电影推荐系统</h1>
-                <p class="lead">E02014283方希悦-毕业设计</p>
-                <p class="lead">使用Python+Django+Mysql+Bootstrap创建</p>
+                <h1 class="cover-heading">基于协同过滤算法的电影推荐系统</h1>
+                <p class="lead">方希悦-毕业设计</p>
+{#                <p class="lead">使用Python+Django+Mysql+Bootstrap创建</p>#}
                 <p class="lead">
                     <a href="{% url 'movie:index' %}" class="btn btn-lg btn-default">进入系统影首页</a>
                 </p>
