--- a/templates/movie/recommend.html
+++ b/templates/movie/recommend.html
@@ -34,7 +34,7 @@
                 <div class="alert alert-success" role="alert">{{ message }}</div>
             {% endif %}
         {% endfor %}
-        <div class="alert alert-info" role="alert">基于神经协同过滤算法，给您推荐的10部电影！</div>
+        <div class="alert alert-info" role="alert">基于协同过滤算法，给您推荐的10部电影！</div>
     </div>
 
     {% for movie in movies %}
