--- a/templates/movie/index.html
+++ b/templates/movie/index.html
@@ -31,7 +31,7 @@
         {% endfor %}
     </div>
 
-    <!-- nav视图分页用 不用管-->
+    <!-- nav视图分页用-->
     <nav style="text-align: center;">
         <ul class="pagination">
             {#previous page#}
@@ -46,15 +46,15 @@
                 <li><a href="javascript:void(0)">...</a></li>
             {% endif %}
 
-            {#        左边的page#}
+            {#左边的page#}
             {% for left_page in left_pages %}
                 <li><a href="{% url 'movie:index' %}?p={{ left_page }}">{{ left_page }}</a></li>
             {% endfor %}
 
-            {#    当前的page#}
+            {#当前的page#}
             <li class="active"><a href="javascript:void(0);">{{ current_page }}</a></li>
 
-            {#     右边的page#}
+            {#边的page#}
             {% for right_page in right_pages %}
                 <li><a href="{% url 'movie:index' %}?p={{ right_page }}">{{ right_page }}</a></li>
             {% endfor %}
